# wombat-miles

./: .gitignore  DESIGN.md  README.md  pyproject.toml  requirements.txt
tests/: mock_data.py  test_aeroplan.py  test_alaska.py  test_alerts.py  test_alerts_upgrade.py  test_cache.py  test_calendar.py  test_connection.py  test_multi_city.py  test_price_history.py  test_recommend.py
wombat_miles/: __init__.py  __main__.py  alerts.py  cache.py  cli.py  connection.py  formatter.py  models.py  price_history.py  recommend.py
wombat_miles/scrapers/: __init__.py  aeroplan.py  alaska.py  base.py
