[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "wombat-miles"
version = "0.1.0"
description = "Personal award flight search CLI - find business class seats using miles"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13",
    "playwright>=1.44",
]

[project.scripts]
wombat-miles = "wombat_miles.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["wombat_miles*"]
